# 50-rust-projects

compress_1/: Cargo.toml  comp_file
compress_1/src/: main.rs
csv_reader_3/: Cargo.toml  file.csv
csv_reader_3/src/: main.rs
decompress_2/: Cargo.toml
decompress_2/src/: main.rs
get_async_request_7/: Cargo.toml
get_async_request_7/src/: main.rs
get_sync_request_6/: Cargo.toml
get_sync_request_6/src/: main.rs
json_reader_4/: Cargo.toml
json_reader_4/src/: main.rs
json_writer_5/: Cargo.toml
json_writer_5/src/: main.rs
making_api_8/: Cargo.toml
making_api_8/src/: main.rs
