[package]
name = "get_sync_request_6"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", features = ["json", "blocking"] }
tokio = { version = "1.28.1", features = ["full"] }
error-chain = "0.12.4"