[package]
name = "making_api_8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.96"
error-chain = "0.12.4"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.28.1", features = ["full"] }
reqwest = { version = "0.11.18", features = ["json", "blocking"] }
